--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
+    "expo-file-system": "^19.0.21",
     "expo-image-picker": "^17.0.10",
     "react": "19.2.0",
     "react-native": "0.83.0",
