--- a/ios/FEPAMobile/Info.plist
+++ b/ios/FEPAMobile/Info.plist
@@ -36,6 +36,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Cho phép dùng Face ID để bảo mật đăng nhập và xác thực giao dịch.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
