chore: cập nhật cấu hình hệ thống Android và sửa lỗi lặt vặt

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -8,3 +8,6 @@ includeBuild('../node_modules/@react-native/gradle-plugin')
 include ':react-native-voice_voice'
 project(':react-native-voice_voice').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-voice/voice/android')
 
+include ':watermelondb-jsi'
+project(':watermelondb-jsi').projectDir = new File(rootProject.projectDir, '../node_modules/@nozbe/watermelondb/native/android-jsi')
+
