--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "org.jetbrains.kotlin.android"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services"
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -117,6 +118,7 @@ dependencies {
         implementation jscFlavor
     }
     implementation project(':react-native-voice_voice')
+    implementation project(':watermelondb-jsi')
 }
 
 project.ext.vectoricons = [
