--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.28.6",
+    "@nozbe/watermelondb": "^0.28.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-community/image-editor": "^4.3.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.8.4",
+    "@react-native-firebase/auth": "^23.8.4",
+    "@react-native-firebase/messaging": "^23.8.4",
+    "@react-native-google-signin/google-signin": "^16.1.1",
     "@react-native-voice/voice": "^3.2.4",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
@@ -23,13 +31,16 @@
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-biometrics": "^3.0.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gifted-charts": "^1.4.70",
     "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.19.0",
     "react-native-svg": "^15.15.1",
-    "react-native-vector-icons": "^10.3.0"
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-vision-camera": "^4.7.3",
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
