--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@nozbe/watermelondb": "^0.28.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.6.0",
-    "@react-native-community/image-editor": "^4.3.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^23.8.4",
     "@react-native-firebase/auth": "^23.8.4",
@@ -31,6 +30,7 @@
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-biometrics": "^3.0.1",
+    "react-native-date-picker": "^5.0.13",
     "react-native-fs": "^2.20.0",
     "react-native-gifted-charts": "^1.4.70",
     "react-native-image-picker": "^8.2.1",
