Optimize OCR Scan flow for Android: switch to XHR, simplify expenseData handling, and fix network errors

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -80,7 +80,7 @@ android {
 
     namespace "com.fepamobile"
     defaultConfig {
-        applicationId "com.fepamobile"
+        applicationId "com.example.multifood"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
