--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/native-stack": "^7.9.0",
     "axios": "^1.13.2",
+    "crypto-js": "^4.2.0",
     "expo-file-system": "^19.0.21",
     "expo-image-picker": "^17.0.10",
     "react": "19.2.0",
@@ -53,6 +54,7 @@
     "@react-native/eslint-config": "0.83.0",
     "@react-native/metro-config": "0.83.0",
     "@react-native/typescript-config": "0.83.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
